Fixed Wrap?

--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ h1 {
   text-align: unset;
   font-size: 20px;
   width: 2vw;
+  text-wrap:nowrap;
   font-family: "Rubik", sans-serif;
   letter-spacing: 0.3em;
   color: #000000;
